Changed index file

--- a/index.html
+++ b/index.html
@@ -56,52 +56,52 @@
             <table class="table table-bordered table-striped table-hover mt-4">
                 <thead class="table-dark">
                     <tr>
-                        <th>Calculation</th>
-                        <th>Result</th>
+                        <th>ስሌት</th>
+                       <th>ውጤት</th>
                     </tr>
                 </thead>
                 <tbody id="resultTable">
                     <tr>
-                        <td>Amete Alem</td>
+                        <td>ዓመተ አለም</td>
                         <td id="ameteAlem"></td>
                     </tr>
                     <tr>
-                        <td>Evangelist of the Year</td>
+                        <td>ወንጌላዊ</td>
                         <td id="wengelawi"></td>
                     </tr>
                     <tr>
-                        <td>Day of Ethiopian New Year (Tinte Qemer)</td>
+                        <td>እንቁጣጣሽ</td>
                         <td id="tinteQemer"></td>
                     </tr>
                     <tr>
-                        <td>Medeb</td>
+                        <td>መደብ</td>
                         <td id="medeb"></td>
                     </tr>
                     <tr>
-                        <td>Wenber</td>
+                        <td>ወንበር</td>
                         <td id="wenber"></td>
                     </tr>
                     <tr>
-                        <td>Abektie</td>
+                        <td>አበቅቴ</td>
                         <td id="abektie"></td>
                     </tr>
                     <tr>
-                        <td>Metqi</td>
+                        <td>መጥቅእ</td>
                         <td id="metqi"></td>
                     </tr>
                     <tr>
-                        <td>Beale Metqi</td>
+                        <td>በዓለ መጥቅእ</td>
                         <td id="bealeMetqi"></td>
                     </tr>
                     <tr>
-                        <td>Mebaja Hamer (Nineveh)</td>
+                        <td>መባጃ ሐመር(ነነዌ)</td>
                         <td id="mebajaHamer"></td>
                     </tr>
                 </tbody>
             </table>
         </div>
 
-        <h3 class="mt-5">Fasting and Holy Days</h3>
+        <h3 class="mt-5">አጽዋማት በዓላት</h3>
         <div class="table-responsive">
             <table class="table table-bordered table-striped table-hover">
                 <thead class="table-dark">
