Changed the day calculation logic

--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
             </table>
         </div>
 
-        <h3 class="mt-5">አጽዋማት በዓላት</h3>
+        <h3 class="mt-5">አጽዋማት እና በዓላት</h3>
         <div class="table-responsive">
             <table class="table table-bordered table-striped table-hover">
                 <thead class="table-dark">
                     <tr>
-                        <th>Fasting Date / Holy Day</th>
-                        <th>Date</th>
+                        <th>አጽዋማት/በዓላት</th>
+                        <th>ቀን</th>
                     </tr>
                 </thead>
                 <tbody id="fastingTable">
