--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
 <div class="content-wrapper">
     <div class="container text-center">
-        <h2 class="mb-4">Ethiopian Calendar & Fasting Dates Calculator</h2>
+        <h2 class="mb-4">ባሕረ ሐሳብ</h2>
 
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <label for="ethiopianYear" class="form-label">Enter Ethiopian Year:</label>
+                <label for="ethiopianYear" class="form-label">አመተ ምሕረት(በኢትዮጵያ አቆጣጠር) ያስገቡ:</label>
                 <input type="number" id="ethiopianYear" class="form-control mb-3" />
             </div>
             <div class="col-md-6 d-flex align-items-end">
