Add Ethiopian calendar display

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         .table-striped tbody tr:nth-of-type(odd) {
             background-color: rgba(0, 0, 0, 0.05);
         }
+        .current-day {
+            background-color: #f8d7da;
+            color: red;
+        }
     </style>
 </head>
 <body>
@@ -115,6 +119,7 @@
                 </tbody>
             </table>
         </div>
+        <div id="ethiopian-calendar" class="table-responsive mt-4"></div>
     </div>
 </div>
 
