--- a/index.html
+++ b/index.html
@@ -51,7 +51,14 @@
                 <label for="ethiopianYear" class="form-label">አመተ ምሕረት(በኢትዮጵያ አቆጣጠር) ያስገቡ:</label>
                 <input type="number" id="ethiopianYear" class="form-control mb-3" />
             </div>
-            <div class="col-md-6 d-flex align-items-end">
+            <div class="col-md-3">
+                <label for="numeralSystem" class="form-label">Numerals:</label>
+                <select id="numeralSystem" class="form-select mb-3">
+                    <option value="arabic">Arabic</option>
+                    <option value="geez">Geez</option>
+                </select>
+            </div>
+            <div class="col-md-3 d-flex align-items-end">
                 <button class="btn btn-primary" onclick="calculateCalendar()">Calculate</button>
             </div>
         </div>
