Replace results table with responsive cards

--- a/index.html
+++ b/index.html
@@ -63,53 +63,79 @@
             </div>
         </div>
 
-        <div class="table-responsive">
-            <table class="table table-bordered table-striped table-hover mt-4">
-                <thead class="table-dark">
-                    <tr>
-                        <th>ስሌት</th>
-                       <th>ውጤት</th>
-                    </tr>
-                </thead>
-                <tbody id="resultTable">
-                    <tr>
-                        <td>ዓመተ አለም</td>
-                        <td id="ameteAlem"></td>
-                    </tr>
-                    <tr>
-                        <td>ወንጌላዊ</td>
-                        <td id="wengelawi"></td>
-                    </tr>
-                    <tr>
-                        <td>እንቁጣጣሽ</td>
-                        <td id="tinteQemer"></td>
-                    </tr>
-                    <tr>
-                        <td>መደብ</td>
-                        <td id="medeb"></td>
-                    </tr>
-                    <tr>
-                        <td>ወንበር</td>
-                        <td id="wenber"></td>
-                    </tr>
-                    <tr>
-                        <td>አበቅቴ</td>
-                        <td id="abektie"></td>
-                    </tr>
-                    <tr>
-                        <td>መጥቅእ</td>
-                        <td id="metqi"></td>
-                    </tr>
-                    <tr>
-                        <td>በዓለ መጥቅእ</td>
-                        <td id="bealeMetqi"></td>
-                    </tr>
-                    <tr>
-                        <td>መባጃ ሐመር(ነነዌ)</td>
-                        <td id="mebajaHamer"></td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="row mt-4" id="resultCards">
+            <div class="col-sm-6 col-lg-4 mb-3">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">ዓመተ አለም</h5>
+                        <p class="card-text" id="ameteAlem"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 mb-3">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">ወንጌላዊ</h5>
+                        <p class="card-text" id="wengelawi"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 mb-3">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">እንቁጣጣሽ</h5>
+                        <p class="card-text" id="tinteQemer"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 mb-3">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">መደብ</h5>
+                        <p class="card-text" id="medeb"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 mb-3">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">ወንበር</h5>
+                        <p class="card-text" id="wenber"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 mb-3">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">አበቅቴ</h5>
+                        <p class="card-text" id="abektie"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 mb-3">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">መጥቅእ</h5>
+                        <p class="card-text" id="metqi"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 mb-3">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">በዓለ መጥቅእ</h5>
+                        <p class="card-text" id="bealeMetqi"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 mb-3">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">መባጃ ሐመር(ነነዌ)</h5>
+                        <p class="card-text" id="mebajaHamer"></p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <h3 class="mt-5">አጽዋማት እና በዓላት</h3>
