Wrap calendar in card layout

--- a/index.html
+++ b/index.html
@@ -152,7 +152,16 @@
                 </tbody>
             </table>
         </div>
-        <div id="ethiopian-calendar" class="table-responsive mt-4"></div>
+        <div class="row mt-4">
+            <div class="col-12">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">የወር ገበታ</h5>
+                        <div id="ethiopian-calendar" class="table-responsive"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
