--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 
     <style>
         body {
-            background-color: #f5f5f5;
+            background: linear-gradient(135deg, #6a11cb, #2575fc);
+            min-height: 100vh;
+            font-family: Arial, Helvetica, sans-serif;
         }
         .content-wrapper {
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
             max-width: 1000px;
-            margin: 20px auto;
+            margin: 40px auto;
         }
         .form-label {
             font-weight: bold;
@@ -35,17 +37,36 @@
             background-color: rgba(0, 0, 0, 0.05);
         }
         .current-day {
-            background-color: #f8d7da;
-            color: red;
+            background-color: #bee3f8;
+            color: #0d6efd;
         }
         .small-card .card-body {
             padding: 0.5rem;
         }
+        .small-card {
+            border: 1px solid #e1eaff;
+        }
         .small-card .card-title {
             font-size: 1rem;
+            color: #0d6efd;
         }
         .small-card .card-text {
             font-size: 0.9rem;
+        }
+        h2 {
+            color: #0d6efd;
+            font-weight: 700;
+        }
+        h3 {
+            color: #0d6efd;
+            font-weight: 600;
+        }
+        .btn-primary {
+            background-color: #0d6efd;
+            border: none;
+        }
+        .btn-primary:hover {
+            background-color: #0b5ed7;
         }
     </style>
 </head>
@@ -149,8 +170,8 @@
 
         <h3 class="mt-5">አጽዋማት እና በዓላት</h3>
         <div class="table-responsive">
-            <table class="table table-bordered table-striped table-hover">
-                <thead class="table-dark">
+            <table class="table table-bordered table-hover">
+                <thead class="table-primary">
                     <tr>
                         <th>አጽዋማት/በዓላት</th>
                         <th>ቀን</th>
